@startuml user-service
title user-service — src/

package "cpp-httplib" {
  class "httplib::Server" as HttplibServer
}

package "libpqxx / libsodium / nlohmann-json" {
  class "pqxx::connection" as PqxxConnection
  class "Argon2id (crypto_pwhash)" as Argon2
  class "nlohmann::json" as Json
}

namespace password_hash {
  class password_hash <<namespace>> {
    +{static} hash(password: string) : string
    +{static} verify(hash: string, password: string) : bool
  }
}

struct Profile {
  +login: string
  +displayName: optional<string>
  +avatarUrl: optional<string>
  +publicKey: optional<string>
  +email: optional<string>
  +telegramChatId: optional<string>
}

struct ProfileUpdate {
  +displayName: optional<string>
  +avatarUrl: optional<string>
  +publicKey: optional<string>
  +email: optional<string>
  +telegramChatId: optional<string>
}

enum UpdateProfileResult {
  kUpdated
  kNoSuchUser
  kEmailTaken
  kTelegramChatIdTaken
}
note bottom of UpdateProfileResult
  issue #156/#174: обычный bool не различает
  "нет такого пользователя" и "email/
  telegram_chat_id заняты другим аккаунтом"
  (partial unique index на обеих колонках) —
  вызывающей стороне нужно реагировать
  по-разному (404 vs. 409).
end note

struct OtpIdentity {
  +login: string
  +email: optional<string>
  +telegramChatId: optional<string>
}

struct FriendRequestInfo {
  +id: int64
  +requesterLogin: string
  +createdAt: string
}

enum SendFriendRequestResult {
  kSent
  kAutoAccepted
  kAlreadyFriends
  kAlreadyRequested
  kNoSuchRecipient
  kCannotFriendSelf
}
note bottom of SendFriendRequestResult
  issue #187, Фаза 1: kAutoAccepted —
  у получателя уже была pending-заявка
  отправителю, она сразу принимается вместо
  второй записи (взаимный интерес = дружба
  за один вызов, без отдельного accept).
end note

enum RespondToFriendRequestResult {
  kAccepted
  kDeclined
  kNoSuchRequest
  kNotYourRequest
}

struct AvatarData {
  +contentType: string
  +dataBase64: string
}
note bottom of AvatarData
  Issue #384: байты уже в base64, как
  и хранятся (тот же приём, что и
  AttachmentData у chat-service) —
  HttpServer декодирует перед записью
  тела HTTP-ответа.
end note

namespace base64 {
  class base64 <<namespace>> {
    +{static} decode(text: string) : optional<string>
  }
}
note bottom of base64.base64
  Issue #384: своя копия, а не
  переиспользование chat-service's —
  каждый микросервис независим
  (CLAUDE.md), общего пакета нет.
end note

class UserRepository {
  +createUser(login: string, passwordHash: string) : bool
  +findPasswordHash(login: string) : optional<string>
  +findProfile(login: string) : optional<Profile>
  +updateProfile(login: string, update: ProfileUpdate) : UpdateProfileResult
  +resolveOtpIdentifier(identifier: string) : optional<OtpIdentity>
  +sendFriendRequest(requesterLogin: string, recipientLogin: string) : SendFriendRequestResult
  +respondToFriendRequest(requestId: int64, recipientLogin: string, accept: bool) : RespondToFriendRequestResult
  +listIncomingFriendRequests(login: string) : vector<FriendRequestInfo>
  +listFriends(login: string) : vector<string>
  +removeFriend(loginA: string, loginB: string) : bool
  +areFriends(loginA: string, loginB: string) : bool
  +blockUser(blockerLogin: string, blockedLogin: string) : BlockUserResult
  +unblockUser(blockerLogin: string, blockedLogin: string) : bool
  +listBlockedUsers(blockerLogin: string) : vector<string>
  +isBlocked(blockerLogin: string, blockedLogin: string) : bool
  +saveAvatar(login: string, contentType: string, dataBase64: string, avatarUrl: string) : bool
  +findAvatar(login: string) : optional<AvatarData>
}
UserRepository ..> PqxxConnection : opens per call
UserRepository ..> Profile : creates
UserRepository ..> ProfileUpdate : reads
UserRepository ..> UpdateProfileResult : returns
UserRepository ..> OtpIdentity : returns
UserRepository ..> FriendRequestInfo : returns
UserRepository ..> SendFriendRequestResult : returns
UserRepository ..> RespondToFriendRequestResult : returns
UserRepository ..> BlockUserResult : returns
UserRepository ..> AvatarData : returns

class UserService {
  +registerUser(login: string, password: string) : bool
  +verifyCredentials(login: string, password: string) : bool
  +getProfile(login: string) : optional<Profile>
  +updateProfile(login: string, update: ProfileUpdate) : UpdateProfileResult
  +resolveOtpIdentifier(identifier: string) : optional<OtpIdentity>
  +sendFriendRequest(requesterLogin: string, recipientLogin: string) : SendFriendRequestResult
  +respondToFriendRequest(requestId: int64, recipientLogin: string, accept: bool) : RespondToFriendRequestResult
  +listIncomingFriendRequests(login: string) : vector<FriendRequestInfo>
  +listFriends(login: string) : vector<string>
  +removeFriend(loginA: string, loginB: string) : bool
  +areFriends(loginA: string, loginB: string) : bool
  +blockUser(blockerLogin: string, blockedLogin: string) : BlockUserResult
  +unblockUser(blockerLogin: string, blockedLogin: string) : bool
  +listBlockedUsers(blockerLogin: string) : vector<string>
  +isBlocked(blockerLogin: string, blockedLogin: string) : bool
  +saveAvatar(login: string, contentType: string, dataBase64: string, avatarUrl: string) : bool
  +findAvatar(login: string) : optional<AvatarData>
}
note bottom of UserService
  issue #187, Фаза 2: areFriends()
  используется только через
  GET /internal/friendship — chat-service
  проверяет дружбу перед тем, как открыть
  новый диалог личных сообщений.

  issue #471: isBlocked() аналогично — только
  через GET /internal/blocked, направленно
  (не симметрично, в отличие от дружбы), вызывается
  chat-service в обе стороны при открытии диалога.
end note
UserService --> UserRepository : delegates storage to (&)
UserService ..> password_hash.password_hash : uses
password_hash.password_hash ..> Argon2 : implemented with

class AuthServiceClient {
  +verifyToken(token: string) : optional<string>
}
AuthServiceClient ..> "auth-service" : POST /auth/verify

namespace json_guard {
  class json_guard <<namespace>> {
    +{static} exceedsMaxNestingDepth(payload: string_view, maxDepth: int) : bool
  }
}

class HttpServer {
  +listen(host: string, port: int)
  +stop()
  -authenticate(request) : optional<string>
  -handleRegister(request, response)
  -handleVerifyCredentials(request, response)
  -handleGetProfile(request, response)
  -handleUpdateOwnProfile(request, response)
  -handleResolveOtpIdentifier(request, response)
  -handleSendFriendRequest(request, response)
  -handleListIncomingFriendRequests(request, response)
  -handleAcceptFriendRequest(request, response)
  -handleDeclineFriendRequest(request, response)
  -handleListFriends(request, response)
  -handleRemoveFriend(request, response)
  -handleCheckFriendship(request, response)
  -handleBlockUser(request, response)
  -handleUnblockUser(request, response)
  -handleListBlockedUsers(request, response)
  -handleCheckBlocked(request, response)
  -handleUploadAvatar(request, response)
  -handleGetAvatar(request, response)
}
HttpServer --> UserService : delegates to (&)
HttpServer --> AuthServiceClient : authenticates via (const&)
HttpServer *-- HttplibServer : owns
HttpServer ..> Json : encodes responses as
HttpServer ..> json_guard.json_guard : guards parse() with (issue #129)
HttpServer ..> base64.base64 : decodes upload/download bytes with (issue #384)

note right of HttpServer
  Routes:
  POST  /users/register             -> handleRegister (unauthenticated —
                                        called by auth-service itself)
  POST  /users/verify-credentials   -> handleVerifyCredentials (ditto)
  GET   /users/{login}/profile      -> handleGetProfile (issue #110,
                                        any authenticated caller; issue
                                        #225/#243 pentest fix — email/
                                        telegram_chat_id only when
                                        {login} is the caller's own,
                                        toPublicJson() instead of
                                        toJson() otherwise)
  PATCH /users/me                   -> handleUpdateOwnProfile (issue #110,
                                        always writes the token's own
                                        subject — login in the body, if
                                        any, is ignored; partial body
                                        preserves the fields not sent,
                                        fetch-then-merge since
                                        UserRepository::updateProfile()
                                        always writes all five columns
                                        — display_name/avatar_url/
                                        public_key (issue #136)/email
                                        (issue #156)/telegram_chat_id
                                        (issue #174))
  POST  /users/resolve-otp-identifier -> handleResolveOtpIdentifier
                                        (issue #156/#174, unauthenticated —
                                        called by auth-service itself;
                                        принимает login, email или
                                        Telegram chat_id, отвечает
                                        {found, login, email,
                                        telegram_chat_id})
  POST  /friends/requests           -> handleSendFriendRequest (issue #187,
                                        Фаза 1; {recipient_login} — 201
                                        "sent" или "accepted", если у
                                        получателя уже была встречная
                                        pending-заявка)
  GET   /friends/requests           -> handleListIncomingFriendRequests
  POST  /friends/requests/{id}/accept
        /friends/requests/{id}/decline
                                     -> handleAcceptFriendRequest /
                                        handleDeclineFriendRequest (только
                                        адресат конкретной заявки)
  GET   /friends                    -> handleListFriends
  DELETE /friends/{login}           -> handleRemoveFriend
  GET   /internal/friendship?user_a=&user_b=
                                     -> handleCheckFriendship (issue #187,
                                        Фаза 2, unauthenticated — только
                                        для chat-service, см.
                                        UserServiceClient в chat-service;
                                        отвечает {friends: bool})
  POST  /blocks/{login}             -> handleBlockUser (issue #471; 400
                                        на себя, 404 на несуществующего,
                                        409 на уже заблокированного)
  DELETE /blocks/{login}            -> handleUnblockUser (404, если не
                                        был заблокирован)
  GET   /blocks                     -> handleListBlockedUsers
  GET   /internal/blocked?blocker=&blocked=
                                     -> handleCheckBlocked (issue #471,
                                        unauthenticated — только для
                                        chat-service; отвечает
                                        {blocked: bool})
  POST  /profile/avatar             -> handleUploadAvatar (issue #384,
                                        authenticated; {content_type,
                                        data_base64} — content_type
                                        должен начинаться с "image/",
                                        размер декодированных байт <=
                                        2 МБ; сохраняет байты и обновляет
                                        avatar_url вызывающего на
                                        /users/<login>/avatar, отвечает
                                        {avatar_url})
  GET   /users/{login}/avatar       -> handleGetAvatar (issue #384,
                                        unauthenticated — тот же публичный
                                        доступ, что и у avatar_url в
                                        GET .../profile; отдаёт сохранённые
                                        байты с их content_type, 404 если
                                        аватар не загружен)
end note

note right of HttpServer
  Issue #225 (pentest), верифицировано без находок:
  - PATCH /users/me никогда не читает "login" из
    тела запроса (см. handleUpdateOwnProfile()) —
    самозванство через тело невозможно.
  - accept/decline чужой заявки — WHERE recipient_login
    сверяется с логином из токена в
    UserRepository::respondToFriendRequest(), не
    совпало -> kNotYourRequest -> тот же 404, что и
    kNoSuchRequest (не палит существование чужой
    заявки другим кодом ответа).
  - Повторное использование id уже обработанной
    заявки — тот же respondToFriendRequest() ищет
    строку с WHERE status = 'pending', уже
    accepted/declined запись не находится -> 404.
  - POST /users/register, /users/verify-credentials,
    /users/resolve-otp-identifier не проверяют
    Authorization по конструкции (вызываются только
    auth-service) — каждый принимает и возвращает
    данные ровно по одному переданному
    логину/identifier, без пакетного доступа или
    перечисления остальных пользователей.
end note

note right of json_guard.json_guard
  Issue #129: nlohmann::json::parse()
  is recursive-descent and stack-
  overflows the whole process on
  deeply nested input — checked
  before every parse() of a request
  body, not caught after the fact.
end note

note bottom of UserRepository
  Postgres, via docker-compose.yml
  locally. One connection per call —
  pqxx::connection isn't thread-safe
  and httplib may dispatch from
  multiple threads.
end note

@enduml
